--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "mongoose": "~3.8.1",
     "mongodb": "~1.3.2",
     "connect-flash": "~0.1.1",
-    "math-captcha": "~0.1.1"
+    "math-captcha": "~0.1.1",
+    "sweetcaptcha": "0.0.2",
+    "recaptcha": "~1.2.0",
+    "soap": "~0.3.1"
   }
 }
