sandbox for reciever app

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "indoor-location-tracker",
+  "name": "consumer-app-server",
   "version": "0.0.1",
   "private": true,
   "dependencies": {
@@ -7,8 +7,8 @@
     "jade": "~1.1.5",
     "mongoose": "~3.8.7",
     "connect-flash": "~0.1.1",
-    "memory-cache": "0.0.5",
     "custom-logger": "~0.2.1",
-    "socket.io": "~0.9.16"
+    "socket.io": "~0.9.16",
+    "node-gcm": "~0.9.10"
   }
 }
